- CHG: Faster and more reliable revision graph filtering. (Stefan Fuhrmann)
- CHG: If tsvn:logtemplate was set and not changed in the commit dialog, it
       isn't added to the log history anymore. (Stefan)
- CHG: "Ambiguous URL" option no longer limits log cache functionality.
       (Stefan Fuhrmann)
- CHG: Various improvements to log statistics graphs (Aras Pranckevicius)
       
Version 1.5.6
- CHG: Disabled capieng again - users were annoyed. (Stefan)
- BUG: possible segfault in TSVNCache when shutting down windows. (Stefan)
- BUG: The client-side hook scripts weren't started if only deletions were
       committed or updated. (Stefan)
- BUG: The "show log" was shown for added files in the status 
       list control. (Stefan)
- BUG: Files/Folders with '%' in the name could not be renamed in the
       repository browser. (Stefan)
- BUG: Reverting files could have removed associated folders. (Stefan)
- BUG: The OK button in the checkout dialog was sometimes disabled. (Stefan)
- BUG: Creating a tag/branch from the repository browser didn't work if
       the target folder did not exist. (Stefan)
       
Version 1.5.5
- BUG: The properties dialog would show the url with backward slashes when
       started from the repository browser. (Stefan)

Version 1.5.4
- CHG: OpenSSL 0.9.8i with capieng enabled
- BUG: Applying a patch where a context line had UTF-BOMs 
       in it failed. (Stefan)
- BUG: Checking out multiple folders from the repository browser failed
       to unescape the target folder. (Stefan)
- BUG: If an url had special chars which needed escaping below the 
       repository root, showing the log did not always work. (Stefan)
- BUG: Comparing two revisions sometimes did not work if the url didn't
       exist anymore in HEAD. (Stefan)
- BUG: Diffing/Blaming from TortoiseBlame on merged revisions did not
       work in certain situations. (Stefan)
- BUG: Unescape the target paths when exporting the changed files from