@@ -96,6 +96,17 @@ BOOL CMergeWizardOptions::OnInitDialog()
 	AdjustControlSize(IDC_IGNOREALLWHITESPACES);
 	AdjustControlSize(IDC_RECORDONLY);
 
+	AddAnchor(IDC_MERGEOPTIONSGROUP, TOP_LEFT, TOP_RIGHT);
+	AddAnchor(IDC_MERGEOPTIONSDEPTHLABEL, TOP_LEFT);
+	AddAnchor(IDC_DEPTH, TOP_LEFT, TOP_RIGHT);
+	AddAnchor(IDC_IGNOREANCESTRY, TOP_LEFT);
+	AddAnchor(IDC_IGNOREEOL, TOP_LEFT);
+	AddAnchor(IDC_COMPAREWHITESPACES, TOP_LEFT);
+	AddAnchor(IDC_IGNOREWHITESPACECHANGES, TOP_LEFT);
+	AddAnchor(IDC_IGNOREALLWHITESPACES, TOP_LEFT);
+	AddAnchor(IDC_RECORDONLY, TOP_LEFT);
+	AddAnchor(IDC_DRYRUN, BOTTOM_RIGHT);
+
 	return TRUE;
 }
 
