@@ -74,6 +74,7 @@
 - CHG: "Ambiguous URL" option no longer limits log cache functionality.
        (Stefan Fuhrmann)
 - CHG: Various improvements to log statistics graphs (Aras Pranckevicius)
+- CHG: The merge wizard is now resizable. (Stefan)
        
 Version 1.5.6
 - CHG: Disabled capieng again - users were annoyed. (Stefan)
